.provarCaches/00D410000011HE0EAM/objects/rstk__pocontrcv__c.object
<CustomObject>
    <description>pocontrcv__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__pocontrcv_containerid__c &amp; TEXT( rstk__pocontrcv_datercvd__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__pocontrcv_containerid__c + &apos; (&apos; + TEXT( rstk__pocontrcv_datercvd__c )  + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>rstk__pocontrcv_poshipcont__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_askdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Moment of API Call</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_containerid__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Container ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_datercvd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Receipt Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_hightemp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>High Transit Temp</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_lowtemp__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Low Transit Temp</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__pocontrcv_poshipcont__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Shipper Container</label>
        <referenceTo>rstk__poshipcont__c</referenceTo>
        <relationshipLabel>WMS Container Receipts</relationshipLabel>
        <relationshipName>pocontrcvs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>WMS Container Receipt</label>
    <listViews>
        <fullName>rstk__RS_WMS_Container_Receipts</fullName>
        <columns>NAME</columns>
        <columns>rstk__pocontrcv_containerid__c</columns>
        <columns>rstk__pocontrcv_poshipcont__c</columns>
        <columns>rstk__pocontrcv_datercvd__c</columns>
        <columns>rstk__pocontrcv_askdate__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>WMS Container Receipts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WMS Container Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Valid_Container_ID</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pocontrcv_containerid__c == null</errorConditionFormula>
        <errorMessage>Container ID is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Valid_Receipt_Date</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__pocontrcv_datercvd__c == null</errorConditionFormula>
        <errorMessage>Receipt Date is required</errorMessage>
    </validationRules>
</CustomObject>